--- a/style.css
+++ b/style.css
@@ -4,14 +4,67 @@ div {
     font-size: 32px;
     text-align: center;
     font-weight: bold;
+    display: flex;
 }
 
-p {
-    background-color: palevioletred;
-    color: white;
-    font-size: 18px;
+
+
+.food.spaghetti {
+    background-color: #ff7477;
 }
-button {
-    background-color: palevioletred;
-    font-size: 18px;
+
+.food.lasagna {
+    background-color: #e69597;
+   
+}
+
+.food.potatoes {
+    background-color: #ffc0cb;
+   
+}
+
+.spaghetti, .potatoes, .lasagna {
+     color: white;
+    font-size: 28px;
+    font-family:'Courier New', Courier, monospace;
+}
+
+.parent .child {
+    font-size: 20px;
+    text-align: center;
+}
+
+#separate {
+    color: red;
+    text-align: left;
+}
+
+.food {
+    width: 350px;
+    height: 110px;
+    margin: 20px;
+    padding: 20px;
+    border: 5px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.flex-container {
+    display: flex;
+    background: white;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 1;
+    
+}
+
+
+
+a {
+    font-size: 22px;
+    padding: 8px;
+    /* this removes the line under the links */
+    text-decoration: none;
 }
